loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:9: error: not found: value estSurBaggle
    if (!estSurBaggle()) {
         ^