loopdowhile.Poucet2.scala.code
do {
  
  var baggles = 0
  
  while (!crossing()) {
    
    avance();
    
    if (!estSurBaggle()) {
      
      baggles = baggles + 1
      
    }
    
  }
    
    if (baggles <= 2) {
      droite();
    }
  
    else {
      gauche();
  	}
    

} while (!sortieTrouvee())

avance();